--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.1.15",
     "@nestjs/websockets": "^10.2.8",
     "bcrypt": "^5.1.1",
     "joi": "^17.11.0",
