--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.2.8",
+    "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.15",
     "@nestjs/websockets": "^10.2.8",
@@ -50,6 +50,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.3.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
